--- a/test/PgnConverterTest.csproj
+++ b/test/PgnConverterTest.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PgnConverter\PgnConverter.csproj" />
+    <ProjectReference Include="..\src\PgnConverter.csproj" />
   </ItemGroup>
 
 </Project>
