--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: pack
-        run: dotnet pack -p:PackageVersion=${VERSION}
+        run: dotnet pack ./src/PgnConverter.csproj -p:PackageVersion=${VERSION}
       - name: publish
         run: dotnet nuget push ./src/bin/Release/NormanFrieman.PgnConverter.${VERSION}.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
