--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,13 +14,13 @@ jobs:
         run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
 
       - name: build
-        run: dotnet build --configuration Release /p:Version=${VERSION}
+        run: dotnet build --configuration Release -p:Version=${VERSION}
       
       - name: test
-        run: dotnet test --configuration Release /p:Version=${VERSION} --no-build
+        run: dotnet test --configuration Release -p:Version=${VERSION} --no-build
       
       - name: pack
-        run: dotnet pack --configuration Release /p:Version=${VERSION}
+        run: dotnet pack --configuration Release -p:Version=${VERSION}
       
       - name: publish
         run: dotnet nuget push ./src/bin/Release/NormanFrieman.PgnConverter.${VERSION}.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
