--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,5 @@ jobs:
       run: dotnet build --no-restore
     
     - name: Test
-      working-directory: ./test
+      working-directory: ./tests
       run: dotnet test --no-build --verbosity normal
