--- a/src/NgpConverter/NgpConverter.csproj
+++ b/src/NgpConverter/NgpConverter.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageId>NormanFrieman.Ngp</PackageId>
+    <PackageId>Ngp</PackageId>
     <Version>2.0.0</Version>
     <Author>NormanFrieman</Author>
     <Product>Ngp</Product>
