--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
         run: dotnet test --configuration Release -p:Version=${VERSION} --no-build
       
       - name: pack
-        run: dotnet pack ./src/NgpConverter/NgpConverter.csproj --configuration Release -p:Version=${VERSION}
+        run: dotnet pack ./src/Ngp/Ngp.csproj --configuration Release -p:Version=${VERSION}
       
       - name: publish
-        run: dotnet nuget push ./src/NgpConverter/bin/Release/Ngp.${VERSION}.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+        run: dotnet nuget push ./src/Ngp/bin/Release/Ngp.${VERSION}.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
