--- a/src/Ngp/Ngp.csproj
+++ b/src/Ngp/Ngp.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <Antlr4 Include="Pgn.g4">
-      <Package>NgpConverter.Generated</Package>
+      <Package>Ngp.Generated</Package>
       <Listener>false</Listener>
       <Error>false</Error>
       <Visitor>True</Visitor>
