--- a/tests/NgpTest.csproj
+++ b/tests/NgpTest.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\NgpConverter\NgpConverter.csproj" />
+    <ProjectReference Include="..\src\Ngp\Ngp.csproj" />
   </ItemGroup>
 
 </Project>
